(lang dune 3.5)

(name kat0)

(generate_opam_files true)

(source
 (github hd2g/kat0))

(authors "hd2g")

(maintainers "hd2g")

(license LICENSE)

(documentation https://github.com/hd2g/kat0)

(package
 (name kat0)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
